--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
-  "name": "angular-quickstart",
-  "version": "1.0.0",
+  "name": "angular-gui",
+  "version": "0.0.1",
   "description": "QuickStart package.json from the documentation, supplemented with testing support",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "e2e": "tsc && concurrently \"http-server -s\" \"protractor protractor.config.js\" --kill-others --success first",
-    "lint": "tslint ./app/**/*.ts -t verbose",
-    "lite": "lite-server",
-    "pree2e": "webdriver-manager update",
-    "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
-    "test-once": "tsc && karma start karma.conf.js --single-run",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "start": "ng serve",
+    "build": "ng build"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.0",
-    "@angular/common": "~2.2.0",
-    "@angular/compiler": "~2.2.0",
-    "@angular/core": "~2.2.0",
-    "@angular/forms": "~2.2.0",
-    "@angular/http": "~2.2.0",
-    "@angular/platform-browser": "~2.2.0",
-    "@angular/platform-browser-dynamic": "~2.2.0",
+    "@angular/common": "~2.4.10",
+    "@angular/compiler": "~2.4.1",
+    "@angular/compiler-cli": "~2.4.1",
+    "@angular/core": "~2.4.10",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/platform-browser": "^2.4.10",
+    "@angular/platform-browser-dynamic": "^2.4.1",
     "@angular/router": "~3.2.0",
     "angular-in-memory-web-api": "~0.1.15",
+    "chart.js": "^2.5.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "ng2-charts": "^1.5.0",
+    "ng2-facebook-sdk": "^2.2.0",
+    "ngx-bootstrap": "^1.6.5",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
+    "web-animations-js": "^2.2.5",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.0.10",
+    "@angular/cli": "^1.0.3",
+    "@types/jasmine": "^2.5.36",
+    "@types/node": "^6.0.46",
+    "@types/selenium-webdriver": "^2.53.33",
     "canonical-path": "0.0.2",
+    "concurrently": "^3.1.0",
     "http-server": "^0.9.0",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -48,12 +47,13 @@
     "karma-htmlfile-reporter": "^0.3.4",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
     "protractor": "4.0.9",
-    "webdriver-manager": "10.2.5",
     "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "^2.5.36",
-    "@types/selenium-webdriver": "^2.53.33"
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.10",
+    "webdriver-manager": "10.2.5"
   },
   "repository": {}
 }
