--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
     "web-animations-js": "^2.2.5",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.6.26",
+    "@agm/core": "^1.0.0-beta.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.3",
